<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:background="@color/white">

    <Space
        android:layout_width="match_parent"
        android:layout_height="34dp" />

    <TextView
        android:id="@+id/tvTituloOrdenes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_ordenes"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:paddingBottom="8dp"/>

    <Spinner
        android:id="@+id/spFiltroEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/estado_pago_filtro"
        android:prompt="@string/filtro_estado_pago"
        android:layout_marginBottom="8dp"/>

    <ProgressBar
        android:id="@+id/progressOrdenes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sin_ordenes"
        android:textColor="@color/black"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerOrdenes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="8dp"/>

</LinearLayout>